--- a/src/app/features/forecast-info/forecast-info.component.html
+++ b/src/app/features/forecast-info/forecast-info.component.html
@@ -1,3 +1,59 @@
-<article class="forecast">
-    <img class="forecast-image" [src]="forecast.current.condition.icon" alt="cloud_image">
-</article>
+<aside class="weather">
+    <header class="weather-header">
+        <h2 class="weather-title">Current Weather Today</h2>
+        <section class="buttons">
+            <section class="celsius checkbox">
+                <label class="celsius-label checkbox-label" for="°C">°C</label>
+                <input 
+                    class="celsius-input checkbox-input" 
+                    type="checkbox" 
+                    id="°C" 
+                    #celsius 
+                    (change)="changeCelsiusFlag(celsius)"
+                >
+            </section>
+            <section class="mile checkbox">
+                <label class="mile-label checkbox-label" for="mph">mph</label>
+                <input 
+                    class="mile-input checkbox-input" 
+                    type="checkbox" 
+                    id="mph" 
+                    #mile 
+                    (change)="changeMileFlag(mile)"
+                >
+            </section>
+        </section>
+    </header>
+    <article class="weather-info">
+        <section class="weather-cloud">
+            <img class="cloud-image" [src]="forecast.current.condition.icon" alt="cloud_image">
+            <p class="cloud-text info-pgh">{{ forecast.current.condition.text }}</p>
+        </section>
+        <section class="weather-temp">
+            <p class="temp-info" *ngIf="isCheckedCelsius">
+                {{ forecast.current.temp_c }}°C
+            </p>
+            <p class="temp-info" *ngIf="!isCheckedCelsius">
+                {{ forecast.current.temp_f }}°F
+            </p>
+        </section>
+        <section class="weather-feels">
+            <p class="feels-info info-pgh" *ngIf="isCheckedCelsius">
+                Feels like {{ forecast.current.feelslike_c }}°C
+            </p>
+            <p class="feels-info info-pgh" *ngIf="!isCheckedCelsius">
+                Feels like {{ forecast.current.feelslike_f }}°F
+            </p>
+        </section>
+        <section class="weather-humidity">
+            <p class="humidity-info info-pgh">Humidity: {{ forecast.current.humidity }}%</p>
+            <p class="wind-info info-pgh" *ngIf="!isCheckedMile">
+                Wind: {{ forecast.current.wind_kph }} km/h
+            </p>
+            <p class="wind-info info-pgh" *ngIf="isCheckedMile">
+                Wind: {{ forecast.current.wind_mph }} mph
+            </p>
+            <p class="wind-dir info-pgh">Wind Direction: {{ forecast.current.wind_dir }}</p>
+        </section>
+    </article>
+</aside>
