--- a/src/app/features/forecast-info/forecast-info.component.html
+++ b/src/app/features/forecast-info/forecast-info.component.html
@@ -3,7 +3,7 @@
         <h2 class="weather-title">Current Weather Today</h2>
         <section class="buttons">
             <section class="celsius checkbox">
-                <label class="celsius-label checkbox-label" for="°C">°C</label>
+                <label class="celsius-label checkbox-label" for="°C">{{celsiusText}}</label>
                 <input 
                     class="celsius-input checkbox-input" 
                     type="checkbox" 
@@ -13,7 +13,7 @@
                 >
             </section>
             <section class="mile checkbox">
-                <label class="mile-label checkbox-label" for="mph">mph</label>
+                <label class="mile-label checkbox-label" for="mph">{{mphText}}</label>
                 <input 
                     class="mile-input checkbox-input" 
                     type="checkbox" 
